feat: add ortools cp-sat solver alternative

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=1.26",
     "matplotlib>=3.8",
     "Pillow>=10.0",
+    "ortools>=9.10",
 ]
 
 [project.optional-dependencies]
