--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,14 @@ dependencies = [
     "ortools>=9.10",
 ]
 
+[project.scripts]
+enclose-horse = "enclose_horse.cli:main"
+
 [project.optional-dependencies]
 dev = ["pytest>=7.4"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+enclose_horse = ["data/*.json"]
